Avoid using methods which are not available on TeaVM